--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,20 +1,22 @@
 <idea-plugin>
   <id>shoobah.pink.as.heck</id>
   <name>Pink as Heck</name>
-  <version>0.1</version>
+  <version>0.2.1</version>
+  <vendor>Shoobah</vendor>
 
   <description><![CDATA[
       <h1>A really pink color theme</h1>
+      <span>This is a really pink theme for those of you who might lack a bit of pink in your IDE :)</span>
     ]]></description>
 
-<!--  <change-notes><![CDATA[-->
-<!--      Add change notes here.<br>-->
-<!--      <em>most HTML tags may be used</em>-->
-<!--    ]]>-->
-<!--  </change-notes>-->
+<!--  <change-notes><![CDATA[
+      Add change notes here.<br>
+      <em>most HTML tags may be used</em>
+    ]]>
+  </change-notes>-->
 
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
-  <idea-version since-build="173.0"/>
+  <idea-version since-build="191.0"/>
 
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
        on how to target different products -->
